refactor: api seeds
